tests/pass/evaluate.us
fn main() {
    (5 - (3 - 1)) + -1 ;
}