tests/fail/arg_mismatch_no_inst.us

fn id<T>(v:T) -> T {
    return v;
}

fn main()  {
  
    id();
}